2001-07-05  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Link krshd with KRSHDLIBS instead of LOGINLIBS.

	* configure.in: Creare a new variable KRSHDLIBS which differs from
	LOGINLIBS by not including libkrb524.a. Test for getenv.

	* krcp.c: Prototype lostconn().

	* krlogind.c: Provide prototype for signal handler cleanup. Implied
	need to add extra argument to function - ensure consistant
	calling.

	* krsh.c: Provide prototype for signal handler sendsig.

	* krshd.c: Rewrite error() to use stdargs/varargs.
	(doit): When creating a tty name using getpid. Ensure that does
	not overflow tty string buffer.

	* login.c: Provide prototype for signal handler timedout.

	* setenv.c: Do not define getenv() unless needed.

	* v4rcp.c: Rewrite error() to use stdargs/varargs. Add signal
	number argument to lostconn(), include prototype, and ensure
	called consistantly.

2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* v4rcp.c, login.c: Fill in prototypes, declare many functions static. 

2001-06-22  Ezra Peisach  <epeisach@mit.edu>

	* krlogind.c: Provide daemon prototype if needed.

	* configure.in: Test if prototype for daemon necessary.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* login.c: Much cleanup to reduce globals and shadowing.

	* krlogind.c (main): Change sin to sock_in.

	* krshd.c: Change sin to sock_in to not shadow global. Change some
	local variables to not shadow others.

2001-06-20  Ezra Peisach  <epeisach@mit.edu>

	* login.c (read_env_vars_from_file: Only define if
	/etc/environment or /etc/timezone exists on machine.

2001-06-20  Ezra Peisach  <epeisach@mit.edu>

	* kcmd.c: Get rid of prototypes for krb5_write_message(),
	krb5_net_write(), and krb5_net_read(). They are in krb5.h now.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c (sink): Cast argument to isdigit() to int.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* loginpaths.h: If _PATH_DEFPATH is defined, undefine LPATH and
	RPATH before redefining.
