@@ -1,3 +1,7 @@
+2001-07-08  Ezra Peisach  <epeisach@mit.edu>
+
+	* login.c (sigint): Declare static.
+
 2001-07-05  Ezra Peisach  <epeisach@mit.edu>
 
 	* Makefile.in: Link krshd with KRSHDLIBS instead of LOGINLIBS.
